--- a/journal_layout.css
+++ b/journal_layout.css
@@ -1,30 +1,78 @@
-body{
+#body{
+    background-image: url("images/background.gif");
+    font-family: 'Courier New', Courier, monospace;
+    color: #3ca0a0;
    
-    border-style: solid;
-    border-color: green;
-    border-width: 5px;
 }
 
-#redBorder{
+a{
+    text-decoration: none;
+    color: #307272 ;
+}
+#body-content{
+    border: 10px solid white;
+    background-color: #FFFFFF;
+
+    margin-left: 10%;
+    margin-right: 10%;
+
+    position: fixed;
+
+}
+
+#first-box{
+    
+    text-align: right;
+
+    background-color: #90d3d3;
+
+}
+
+
+#first-box h2{
+   font-size: 14pt;
+}
+
+.body-sections{
+    border: 4px solid #75baba;
+    background-color: #99cccc;
+
+    padding: 5px;
+    margin-top: 10px;
+
+    overflow: hidden;
+
+    font-size: 18px;
+    
+}
+
+.images{
+   float: right;
+}
+
+.dates{
+    border-bottom: 2px dashed rgb(29, 29, 203);
+}
+
+
+#bodies{
+ 
+    clear: right;
+    overflow: hidden;
+
    
-    border-style: solid;
-    border-color: red;
-    border-width: 5px;
 }
 
-#purpleBorder{
-    display: inline-block;
-    border-style: solid;
-    border-color: purple;
-    border-width: 5px;
+#friends-body{
+    margin-right: 10px;
+    float: left;
 
+    color: #68b3b3;
+
+    background-color: #32b6b6;
+    border: 4px solid #0c4444;
 }
 
-blueBorder{
-    display: inline-block;
-    border-style: solid;
-    border-color: blue;
-    border-width: 5px;
-
+#friends-body a{
+    color: black;
 }
-
